--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   animated_background: ^2.0.0
   http: ^0.13.4
+  json_annotation: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +41,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/animated_background.gif
+    - assets/images/animated_background.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
