--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   animated_background: ^2.0.0
   http: ^0.13.4
   json_annotation: ^4.0.1
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  formz: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +48,8 @@ dev_dependencies:
 
   build_runner: ^2.1.11
   json_serializable: ^6.2.0
+  bloc_test: ^9.0.0
+  mocktail: ^0.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
